--- a/scripts/interactive-contact-conversion.Rmd
+++ b/scripts/interactive-contact-conversion.Rmd
@@ -16,7 +16,7 @@ library(tidyverse)
 Data must be exported in OUTLOOK format
 
 ```{r read in google contacts export, message=FALSE}
-x <- read_csv("../data/2023-12-10_contacts.csv")
+x <- read_csv("../data/g-contacts_exports/2024-12-13_contacts.csv")
 
 head(x)
 
@@ -91,7 +91,7 @@ out$num.st <- NULL
 # Write output for uploading to website
 date <- Sys.Date() %>%
   as.Date(format = "%F")
-write.csv(out, file = paste0("../data/", date, "_holiday_simplytoimpress.csv", sep = ""),
+write.csv(out, file = paste0("../data/script-outputs/", date, "_holiday_simplytoimpress.csv", sep = ""),
             row.names = FALSE, na = "")
 ```
 
@@ -115,7 +115,7 @@ head(shut)
 ```
 
 ```{r}
-write.csv(shut, file = paste0(date, "_holiday_shutterfly.csv", sep = ""),
+write.csv(shut, file = paste0("../data/script-outputs/", date, "_holiday_shutterfly.csv", sep = ""),
             row.names = FALSE, na = "")
 ```
 
@@ -137,7 +137,7 @@ pc <-
          USState, 
          USZipCode)
   
-write.csv(pc, file = paste0("../data/", date, "_holiday_paperculture.csv", sep = ""),
+write.csv(pc, file = paste0("../data/script-outputs/", date, "_holiday_paperculture.csv", sep = ""),
             row.names = FALSE, na = "")
 ```
 
@@ -145,6 +145,6 @@ state.name
 ```{r}
 state.name
 state.abb
-match(out$`Home State`, state.)
+match(out$`Home State`, state.abb)
 ```
 
